more accurate var names prevent from crashing when connection is lost

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,16 @@
     <string name="successfully_signed_up">You successfully signed up</string>
     <string name="sign_in_error">Login failed. Please check your login and password</string>
     <string name="sign_up_error">Signup failed</string>
-    <string name="no_network_available">No network available</string>
+    <string name="no_network">No network available</string>
+    <string name="retrieving_data_error">Unable to retrieve data</string>
+    <string name="network_error">network error</string>
+    <string name="parsing_error">parsing error</string>
     <string name="to_do_list_title">Todo List</string>
     <string name="user_list_title">User list</string>
     <string name="no_update_allowed">An already done task cannot be updated</string>
+    <string name="no_update_possible">No task update possible while offline</string>
     <string name="task_updated">Task successfully updated</string>
-    <string name="task_not_updated">Task update failed</string>
+    <string name="task_not_updated">Error updating task</string>
     <string name="task_sent">Task successfully sent</string>
     <string name="task_not_sent">Error sending task </string>
     <string name="refresh">Refresh</string>
